Переделал структуру карточек товаров .product-card

--- a/index.html
+++ b/index.html
@@ -2507,13 +2507,13 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="product-card__prices skeleton">
+                                                <!-- <div class="product-card__prices skeleton">
                                                     <span class="product-card__price">
                                                         6 781 ₽
                                                     </span>
                                                     <span class="product-card__price-old">
                                                     </span>
-                                                </div>
+                                                </div> -->
 
                                             </div>
 
@@ -2574,6 +2574,13 @@
                                                 </button>
                                             </div>
 
+                                            <div class="product-card__prices skeleton">
+                                                <span class="product-card__price">
+                                                    6 781 ₽
+                                                </span>
+                                                <span class="product-card__price-old">
+                                                </span>
+                                            </div>
                                         </div>
 
                                         <div class="product-card__mobile-footer">
@@ -2806,15 +2813,6 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="product-card__prices skeleton">
-                                                    <span class="product-card__price product-card__price--discount">
-                                                        6 781 ₽
-                                                    </span>
-                                                    <span class="product-card__price-old">
-                                                        9 864 ₽
-                                                    </span>
-                                                </div>
-
                                             </div>
 
                                             <div class="product-card__tools">
@@ -2872,6 +2870,15 @@
                                                     </svg>
                                                     <span class="round-btn-counter round-btn-counter--product">1</span>
                                                 </button>
+                                            </div>
+
+                                            <div class="product-card__prices skeleton">
+                                                <span class="product-card__price product-card__price--discount">
+                                                    6 781 ₽
+                                                </span>
+                                                <span class="product-card__price-old">
+                                                    9 864 ₽
+                                                </span>
                                             </div>
 
                                         </div>
@@ -3099,14 +3106,6 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="product-card__prices skeleton">
-                                                    <span class="product-card__price">
-                                                        6 781 ₽
-                                                    </span>
-                                                    <span class="product-card__price-old">
-                                                    </span>
-                                                </div>
-
                                             </div>
 
                                             <div class="product-card__tools">
@@ -3164,6 +3163,15 @@
                                                     </svg>
                                                     <span class="round-btn-counter round-btn-counter--product">1</span>
                                                 </button>
+                                            </div>
+
+                                            <div class="product-card__prices skeleton">
+                                                <span class="product-card__price product-card__price--discount">
+                                                    6 781 ₽
+                                                </span>
+                                                <span class="product-card__price-old">
+                                                    9 864 ₽
+                                                </span>
                                             </div>
 
                                         </div>
@@ -3397,14 +3405,6 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="product-card__prices skeleton">
-                                                    <span class="product-card__price">
-                                                        6 781 ₽
-                                                    </span>
-                                                    <span class="product-card__price-old">
-                                                    </span>
-                                                </div>
-
                                             </div>
 
                                             <div class="product-card__tools">
@@ -3462,6 +3462,15 @@
                                                     </svg>
                                                     <span class="round-btn-counter round-btn-counter--product">1</span>
                                                 </button>
+                                            </div>
+
+                                            <div class="product-card__prices skeleton">
+                                                <span class="product-card__price product-card__price--discount">
+                                                    6 781 ₽
+                                                </span>
+                                                <span class="product-card__price-old">
+                                                    9 864 ₽
+                                                </span>
                                             </div>
 
                                         </div>
@@ -3692,14 +3701,6 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="product-card__prices skeleton">
-                                                    <span class="product-card__price">
-                                                        6 781 ₽
-                                                    </span>
-                                                    <span class="product-card__price-old">
-                                                    </span>
-                                                </div>
-
                                             </div>
 
                                             <div class="product-card__tools">
@@ -3757,6 +3758,15 @@
                                                     </svg>
                                                     <span class="round-btn-counter round-btn-counter--product">1</span>
                                                 </button>
+                                            </div>
+
+                                            <div class="product-card__prices skeleton">
+                                                <span class="product-card__price product-card__price--discount">
+                                                    6 781 ₽
+                                                </span>
+                                                <span class="product-card__price-old">
+                                                    9 864 ₽
+                                                </span>
                                             </div>
 
                                         </div>
@@ -3987,14 +3997,6 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="product-card__prices skeleton">
-                                                    <span class="product-card__price">
-                                                        6 781 ₽
-                                                    </span>
-                                                    <span class="product-card__price-old">
-                                                    </span>
-                                                </div>
-
                                             </div>
 
                                             <div class="product-card__tools">
@@ -4052,6 +4054,15 @@
                                                     </svg>
                                                     <span class="round-btn-counter round-btn-counter--product">1</span>
                                                 </button>
+                                            </div>
+
+                                            <div class="product-card__prices skeleton">
+                                                <span class="product-card__price product-card__price--discount">
+                                                    6 781 ₽
+                                                </span>
+                                                <span class="product-card__price-old">
+                                                    9 864 ₽
+                                                </span>
                                             </div>
 
                                         </div>
@@ -4282,14 +4293,6 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="product-card__prices skeleton">
-                                                    <span class="product-card__price">
-                                                        6 781 ₽
-                                                    </span>
-                                                    <span class="product-card__price-old">
-                                                    </span>
-                                                </div>
-
                                             </div>
 
                                             <div class="product-card__tools">
@@ -4347,6 +4350,15 @@
                                                     </svg>
                                                     <span class="round-btn-counter round-btn-counter--product">1</span>
                                                 </button>
+                                            </div>
+
+                                            <div class="product-card__prices skeleton">
+                                                <span class="product-card__price product-card__price--discount">
+                                                    6 781 ₽
+                                                </span>
+                                                <span class="product-card__price-old">
+                                                    9 864 ₽
+                                                </span>
                                             </div>
 
                                         </div>
@@ -4577,14 +4589,6 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="product-card__prices skeleton">
-                                                    <span class="product-card__price">
-                                                        6 781 ₽
-                                                    </span>
-                                                    <span class="product-card__price-old">
-                                                    </span>
-                                                </div>
-
                                             </div>
 
                                             <div class="product-card__tools">
@@ -4642,6 +4646,15 @@
                                                     </svg>
                                                     <span class="round-btn-counter round-btn-counter--product">1</span>
                                                 </button>
+                                            </div>
+
+                                            <div class="product-card__prices skeleton">
+                                                <span class="product-card__price product-card__price--discount">
+                                                    6 781 ₽
+                                                </span>
+                                                <span class="product-card__price-old">
+                                                    9 864 ₽
+                                                </span>
                                             </div>
 
                                         </div>
@@ -4872,14 +4885,6 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="product-card__prices skeleton">
-                                                    <span class="product-card__price">
-                                                        6 781 ₽
-                                                    </span>
-                                                    <span class="product-card__price-old">
-                                                    </span>
-                                                </div>
-
                                             </div>
 
                                             <div class="product-card__tools">
@@ -4937,6 +4942,15 @@
                                                     </svg>
                                                     <span class="round-btn-counter round-btn-counter--product">1</span>
                                                 </button>
+                                            </div>
+
+                                            <div class="product-card__prices skeleton">
+                                                <span class="product-card__price product-card__price--discount">
+                                                    6 781 ₽
+                                                </span>
+                                                <span class="product-card__price-old">
+                                                    9 864 ₽
+                                                </span>
                                             </div>
 
                                         </div>
@@ -5167,14 +5181,6 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="product-card__prices skeleton">
-                                                    <span class="product-card__price">
-                                                        6 781 ₽
-                                                    </span>
-                                                    <span class="product-card__price-old">
-                                                    </span>
-                                                </div>
-
                                             </div>
 
                                             <div class="product-card__tools">
@@ -5232,6 +5238,15 @@
                                                     </svg>
                                                     <span class="round-btn-counter round-btn-counter--product">1</span>
                                                 </button>
+                                            </div>
+
+                                            <div class="product-card__prices skeleton">
+                                                <span class="product-card__price product-card__price--discount">
+                                                    6 781 ₽
+                                                </span>
+                                                <span class="product-card__price-old">
+                                                    9 864 ₽
+                                                </span>
                                             </div>
 
                                         </div>
