Кнопку Все категории переименовал в Каталог; изменил стили в шапке; изменил стили для дотсов у слайдера баннеров в мобильной версии; изменил одну строчку для карточки товаров, чтобы при наличии у товара всего одного цвета кружочек с цветом стоял вровень с остальным контентом карточки

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <img src="./img/icons/logo.svg" alt="">
                         </a>
                         <button class="oval-btn oval-btn--all-categories blue" id="allCategoriesBtn">
-                            Все категории
+                            Каталог
                             <div class="close">
                                 <span></span>
                                 <span></span>
@@ -378,7 +378,7 @@
                     <div class="header__bottom">
                         <div class="header__bottom-nav">
                             <button class="oval-btn oval-btn--all-categories blue" id="allCategoriesBtn">
-                                Все категории
+                                Каталог
                                 <div class="close">
                                     <span></span>
                                     <span></span>
@@ -394,64 +394,43 @@
                                     <ul class="header__categories-submenu">
                                         <li>
                                             <a href="./category.html">
-                                                Мойки из нержавеющей стали
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="./category.html">
                                                 Мойки из камня
                                             </a>
                                         </li>
+                                        <li>
+                                            <a href="./category.html">
+                                                Мойки из нержавейки
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="./category.html">
+                                                Аксессуары для моек
+                                            </a>
+                                        </li>
                                     </ul>
                                 </li>
-                                <li class="header__categories-item">
+                                <li class="header__categories-item has-submenu">
                                     <a class="header__categories-link" href="./category.html">
                                         Смесители
-                                    </a>
-                                </li>
-                                <li class="header__categories-item">
-                                    <a class="header__categories-link" href="./category.html">
-                                        Кухонные вытяжки
-                                    </a>
-
-                                </li>
-                                <li class="header__categories-item has-submenu">
-                                    <a class="header__categories-link" href="./category.html">
-                                        Комплекты техники
                                         <span></span>
                                     </a>
                                     <ul class="header__categories-submenu">
                                         <li>
                                             <a href="./category.html">
-                                                Комплекты кухонной техники
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="./category.html">
-                                                Стиральная машина + сушильная машина
+                                                Аксессуары для смесителей
                                             </a>
                                         </li>
                                     </ul>
                                 </li>
                                 <li class="header__categories-item has-submenu">
                                     <a class="header__categories-link" href="./category.html">
-                                        Духовые шкафы
+                                        Вытяжки
                                         <span></span>
                                     </a>
                                     <ul class="header__categories-submenu">
                                         <li>
                                             <a href="./category.html">
-                                                Газовые
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="./category.html">
-                                                С функцией СВЧ
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="./category.html">
-                                                Электрические
+                                                Аксессуары для вытяжек
                                             </a>
                                         </li>
                                     </ul>
@@ -464,6 +443,11 @@
                                     <ul class="header__categories-submenu">
                                         <li>
                                             <a href="./category.html">
+                                                Комбинированные
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="./category.html">
                                                 Газовые
                                             </a>
                                         </li>
@@ -474,7 +458,25 @@
                                         </li>
                                         <li>
                                             <a href="./category.html">
-                                                Комбинированные
+                                                Электрические
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="header__categories-item has-submenu">
+                                    <a class="header__categories-link" href="./category.html">
+                                        Духовые шкафы
+                                        <span></span>
+                                    </a>
+                                    <ul class="header__categories-submenu">
+                                        <li>
+                                            <a href="./category.html">
+                                                С СВЧ
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="./category.html">
+                                                Газовые
                                             </a>
                                         </li>
                                         <li>
@@ -482,7 +484,48 @@
                                                 Электрические
                                             </a>
                                         </li>
+                                        <li>
+                                            <a href="./category.html">
+                                                Аксессуары для духовых шкафов
+                                            </a>
+                                        </li>
                                     </ul>
+                                </li>
+                                <li class="header__categories-item has-submenu">
+                                    <a class="header__categories-link" href="./category.html">
+                                        Посудомоечные машины
+                                        <span></span>
+                                    </a>
+                                    <ul class="header__categories-submenu">
+                                        <li>
+                                            <a href="./category.html">
+                                                Аксессуары для ПММ
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="header__categories-item has-submenu">
+                                    <a class="header__categories-link" href="./category.html">
+                                        СВЧ печи
+                                        <span></span>
+                                    </a>
+                                    <ul class="header__categories-submenu">
+                                        <li>
+                                            <a href="./category.html">
+                                                Встраиваемые
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="./category.html">
+                                                Отдельностоящие
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="header__categories-item">
+                                    <a class="header__categories-link" href="./category.html">
+                                        Комплекты
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -547,12 +590,6 @@
                                         </button>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="header-panel__item">
-                                <a class="round-btn round-btn--header" href="./favorites.html">
-                                    <img src="./img/icons/heart.svg" alt="Избранное">
-                                </a>
-                                <span class="round-btn-counter">5</span>
                             </div>
                             <div class="header-panel__item">
                                 <a class="round-btn round-btn--header" href="./compare.html">
@@ -2076,6 +2113,72 @@
                                     <a class="banner__slide-link" href="./action.html"
                                         aria-label="Перейти на страницу акции">
                                         <img src="./img/banner-slider/4.webp" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide banner__slide">
+                                    <a class="banner__slide-link" href="./action.html"
+                                        aria-label="Перейти на страницу акции">
+                                        <img src="./img/banner-slider/5.webp" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide banner__slide">
+                                    <a class="banner__slide-link" href="./action.html"
+                                        aria-label="Перейти на страницу акции">
+                                        <img src="./img/banner-slider/5.webp" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide banner__slide">
+                                    <a class="banner__slide-link" href="./action.html"
+                                        aria-label="Перейти на страницу акции">
+                                        <img src="./img/banner-slider/5.webp" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide banner__slide">
+                                    <a class="banner__slide-link" href="./action.html"
+                                        aria-label="Перейти на страницу акции">
+                                        <img src="./img/banner-slider/5.webp" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide banner__slide">
+                                    <a class="banner__slide-link" href="./action.html"
+                                        aria-label="Перейти на страницу акции">
+                                        <img src="./img/banner-slider/5.webp" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide banner__slide">
+                                    <a class="banner__slide-link" href="./action.html"
+                                        aria-label="Перейти на страницу акции">
+                                        <img src="./img/banner-slider/5.webp" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide banner__slide">
+                                    <a class="banner__slide-link" href="./action.html"
+                                        aria-label="Перейти на страницу акции">
+                                        <img src="./img/banner-slider/5.webp" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide banner__slide">
+                                    <a class="banner__slide-link" href="./action.html"
+                                        aria-label="Перейти на страницу акции">
+                                        <img src="./img/banner-slider/5.webp" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide banner__slide">
+                                    <a class="banner__slide-link" href="./action.html"
+                                        aria-label="Перейти на страницу акции">
+                                        <img src="./img/banner-slider/5.webp" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide banner__slide">
+                                    <a class="banner__slide-link" href="./action.html"
+                                        aria-label="Перейти на страницу акции">
+                                        <img src="./img/banner-slider/5.webp" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide banner__slide">
+                                    <a class="banner__slide-link" href="./action.html"
+                                        aria-label="Перейти на страницу акции">
+                                        <img src="./img/banner-slider/5.webp" alt="">
                                     </a>
                                 </div>
                                 <div class="swiper-slide banner__slide">
