Дополнение к предыдущему коммиту, тестировал без иконки Избранное, сейчас добавил обратно, скорректировал стили

--- a/index.html
+++ b/index.html
@@ -592,6 +592,12 @@
                                 </div>
                             </div>
                             <div class="header-panel__item">
+                                <a class="round-btn round-btn--header" href="./favorites.html">
+                                    <img src="./img/icons/heart.svg" alt="Избранное">
+                                </a>
+                                <span class="round-btn-counter">5</span>
+                            </div>
+                            <div class="header-panel__item">
                                 <a class="round-btn round-btn--header" href="./compare.html">
                                     <img src="./img/icons/compare.svg" alt="Сравнение">
                                 </a>
